# docker-workshop

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: dbt-ci.yml
01-data-ingestion-airflow/: README.md
03-data-transformation-dbt/taxi_rides_ny/models/marts/: daily_trip_summary.sql  fact_trips.sql
03-data-transformation-dbt/taxi_rides_ny/models/staging/: schema.yml  sources.yml
03-data-transformation-dbt/taxi_rides_ny/seeds/: customers.csv
03-data-warehouse/: bigquery_cluster.sql  bigquery_partition.sql
04-analytics-engineering/: main.py  pyproject.toml
04-analytics-engineering/taxi_rides_ny/: dbt_project.yml
04-analytics-engineering/taxi_rides_ny/models/marts/: schema.yml
04-analytics-engineering/taxi_rides_ny/models/staging/: stg_yellow_tripdata.sql
04-analytics-engineering/taxi_rides_ny/snapshots/: customer_snapshot.sql
04-testing-monitoring/: script.py
my/: my_learning_notes.md
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  output_12.parquet  pipeline.py  pyproject.toml
test/: file1.txt
